Source/WebCore/editing/CompositionUnderline.h
@@ -29,21 +29,26 @@
 
 namespace WebCore {
 
+enum class CompositionUnderlineColor { GivenColor, TextColor };
+
 struct CompositionUnderline {
+
     CompositionUnderline()
     {
     }
 
-    CompositionUnderline(unsigned s, unsigned e, const Color& c, bool t) 
-        : startOffset(s)
-        , endOffset(e)
-        , color(c)
-        , thick(t)
+    CompositionUnderline(unsigned startOffset, unsigned endOffset, CompositionUnderlineColor compositionUnderlineColor, const Color& color, bool thick)
+        : startOffset(startOffset)
+        , endOffset(endOffset)
+        , compositionUnderlineColor(compositionUnderlineColor)
+        , color(color)
+        , thick(thick)
     {
     }
 
     unsigned startOffset { 0 };
     unsigned endOffset { 0 };
+    CompositionUnderlineColor compositionUnderlineColor { CompositionUnderlineColor::TextColor };
     Color color;
     bool thick { false };
 };
